# cpp-practice-project-2026-term-2

./: .gitignore  CMakeLists.txt  README.md  app.cpp  app.h  build.sh  gui.cpp  main.cpp  notes.txt  toolchain-mingw64.cmake
